# CMMS

./: .env.example  .gitignore  README.md  app.py  config.py  decorators.py  extensions.py  pyproject.toml  requirements.txt  seed_cert_translations.py  seed_certifications.py  seed_demo.py  seed_demo_site.py  seed_email_templates.py  seed_full_demo.py  seed_help_pl.py  seed_help_v015.py  seed_pm.py  seed_translations.py  seed_translations_bulk.py  seed_translations_i18n_sweep.py  seed_translations_i18n_sweep_2.py  seed_translations_i18n_sweep_3.py  seed_translations_site_style.py  seed_translations_transfers.py  seed_translations_v015.py  update_help_pl.py  update_help_pl_fixes.py
migrations/: env.py
models/: __init__.py  admin_audit_log.py  app_settings.py  asset.py  attachment.py  certification.py  contact.py  email_template.py  help_content.py  location.py  meter.py  part.py  permission.py  preventive_task.py  request.py  request_activity.py  site.py  supplier.py  team.py  time_log.py  translation.py  user.py  work_order.py
scripts/: check_translation_keys.py  migrate_parts_per_site.py  seed_site_style.py
templates/: base.html  csv_import.html
tests/: conftest.py  i18n_keys_baseline.txt  test_admin_audit_log.py  test_admin_ops.py  test_admin_routes.py  test_alembic_in_sync.py  test_assets_bulk.py  test_bulk.py  test_config.py  test_csv_entities.py  test_csv_users.py  test_dependencies.py  test_entity_bulk.py  test_i18n_keys.py  test_labor_snapshot.py  test_migration.py  test_part_transfer_model.py  test_reports_periods.py  test_reports_reorder.py  (+3 more)
(+144 files in other folders)
