[project]
name = "cmms"
version = "1.0.0"
description = "Multi-site CMMS (Computerised Maintenance Management System)"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "pillow>=12.2.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-flask>=1.3.0",
]
